--- a/HCAI_Group 04/templates/prediction.html
+++ b/HCAI_Group 04/templates/prediction.html
@@ -239,10 +239,11 @@ document.addEventListener("DOMContentLoaded", function () {
     if (savedImage) {
         img.src = savedImage;
     } else {
-        img.src = "static/default.png"; // Optional fallback
+        img.src = "static/default.png"; 
     }
 });
 </script>
 
 </body>
 </html>
+
